2011-02-13  Anders Carlsson  <andersca@apple.com>

        Reviewed by Maciej Stachowiak.

        Speculative fix for

        <rdar://problem/8995361>
        CrashTracer: [USER] 47 crashes in WebProcess at com.apple.WebKit2: WebKit::WebPage::layoutIfNeeded + 4

        * WebProcess/WebPage/DrawingAreaImpl.cpp:
        (WebKit::DrawingAreaImpl::~DrawingAreaImpl):
        Invalidate the layer tree host.

2011-02-13  Anders Carlsson  <andersca@apple.com>

        Reviewed by Dan Bernstein.

        The plug-in process heap should be executable by default
        https://bugs.webkit.org/show_bug.cgi?id=54364
        <rdar://problem/8990563>

        * UIProcess/Launcher/ProcessLauncher.h:
        Add executableHeap flag.
        
        * UIProcess/Launcher/mac/ProcessLauncherMac.mm:
        (WebKit::ProcessLauncher::launchProcess):
        Set the right posix_spawn flag if executableHeap is true.

        * UIProcess/Plugins/PluginProcessProxy.cpp:
        (WebKit::PluginProcessProxy::PluginProcessProxy):
        Initialize executableHeap to true.

        * UIProcess/WebProcessProxy.cpp:
        (WebKit::WebProcessProxy::connect):
        Initialize executableHeap to false.

2011-02-13  Anders Carlsson  <andersca@apple.com>

        Reviewed by Sam Weinig.

        Messages waited on are never dispatched
        https://bugs.webkit.org/show_bug.cgi?id=54362
        <rdar://problem/8995051>

        * Platform/CoreIPC/Connection.cpp:
        (CoreIPC::Connection::processIncomingMessage):
        Get the argument encoder from the incoming message.

2011-02-13  Jeremy Moskovich  <jeremy@chromium.org>

        Reviewed by Adam Barth.

        Add a compile-time option to completely disable WebArchive support.
        https://bugs.webkit.org/show_bug.cgi?id=52712

        Add an ENABLE(WEB_ARCHIVE) compile-time setting and use it for all WebArchive code.

        * WebProcess/WebPage/WebPage.cpp:
        (WebKit::WebPage::updatePreferences):
