@@ -25,7 +25,9 @@
 
 #include "config.h"
 #include "WebCoreArgumentCoders.h"
+
 #include "NotImplemented.h"
+#include <WebCore/ResourceResponse.h>
 
 namespace CoreIPC {
 
@@ -37,7 +39,11 @@ void encodeResourceRequest(ArgumentEncoder* encoder, const WebCore::ResourceRequ
 bool decodeResourceRequest(ArgumentDecoder* decoder, WebCore::ResourceRequest& resourceRequest)
 {
     notImplemented();
-    return false;
+
+    // FIXME: Add real implementation when we want to implement something that
+    // depends on this like the policy client.
+    resourceRequest = WebCore::ResourceRequest();
+    return true;
 }
 
 void encodeResourceResponse(ArgumentEncoder* encoder, const WebCore::ResourceResponse& resourceResponse)
@@ -48,7 +54,10 @@ void encodeResourceResponse(ArgumentEncoder* encoder, const WebCore::ResourceRes
 bool decodeResourceResponse(ArgumentDecoder* decoder, WebCore::ResourceResponse& resourceResponse)
 {
     notImplemented();
-    return false;
+
+    // FIXME: Ditto.
+    resourceResponse = WebCore::ResourceResponse();
+    return true;
 }
 
 } // namespace CoreIPC
