@@ -1,3 +1,15 @@
+2011-02-14  Balazs Kelemen  <kbalazs@webkit.org>
+
+        Reviewed by Csaba Osztrogonác.
+
+        [Qt] Need implementation of ResourceRequest and ResourceResponse serialization
+        https://bugs.webkit.org/show_bug.cgi?id=54339
+
+        Add dummy implementation with FIXME and let the core go with it for now.
+        * Shared/qt/WebCoreArgumentCodersQt.cpp:
+        (CoreIPC::decodeResourceRequest):
+        (CoreIPC::decodeResourceResponse):
+
 2011-02-13  Anders Carlsson  <andersca@apple.com>
 
         Reviewed by Maciej Stachowiak.
